--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "autoprefixer": "10.4.20",
     "gray-matter": "^4.0.3",
-    "lightningcss": "1.25.1",
     "next": "15.5.0",
     "next-mdx-remote": "^5.0.0",
+    "postcss": "8.4.47",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -23,13 +24,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "3.4.13",
     "typescript": "^5"
   }
 }
