--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "next": "15.5.0",
     "next-mdx-remote": "^5.0.0",
